--- a/src/Pages/Groups/Groups.css
+++ b/src/Pages/Groups/Groups.css
@@ -1,6 +1,7 @@
 .groups-container {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: auto;
+    margin-top: 25px;
     padding: 24px;
     background-color: transparent;
 }
