--- a/src/Pages/Contact/Contact.css
+++ b/src/Pages/Contact/Contact.css
@@ -124,3 +124,15 @@
         padding: 24px;
     }
 }
+
+.contact-button-container {
+    display: flex;
+    gap: 16px;
+    justify-content: center; 
+    margin-top: 16px;
+}
+
+.contact-button {
+    flex: none;
+    width: auto;
+}
